--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Офисная Кухня с Текстурой Пола и Штрихкодом</title>
   <style>
-    body { margin: 0; background: #e8f0ff; overflow: hidden;}
+    body { margin: 0; background: #e8f0ff; overflow: hidden; position: relative;}
     #tip {
       position: absolute; left: 12px; top: 12px;
       background: #fff;
@@ -49,12 +49,159 @@
       z-index: 100;
       padding: 10px;
     }
+    #phone {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 300px;
+      height: 500px;
+      background: #222;
+      border-radius: 25px;
+      border: 8px solid #333;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+      z-index: 1000;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      color: white;
+      font-family: Arial, sans-serif;
+    }
+    #phone-header {
+      padding: 10px 15px;
+      background: #111;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 14px;
+    }
+    #phone-screen {
+      flex: 1;
+      padding: 15px;
+      overflow-y: auto;
+      background: #1a1a1a;
+    }
+    #phone-footer {
+      padding: 10px;
+      background: #111;
+      display: flex;
+      justify-content: space-around;
+    }
+    #phone-footer button {
+      background: #333;
+      color: white;
+      border: none;
+      padding: 8px 15px;
+      border-radius: 20px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+    #phone-footer button:hover {
+      background: #444;
+    }
+    #scan-mode {
+      text-align: center;
+      padding: 20px;
+    }
+    #scanner-animation {
+      width: 200px;
+      height: 100px;
+      margin: 20px auto;
+      background: linear-gradient(to bottom, transparent 50%, rgba(255,255,255,0.1) 50%);
+      background-size: 100% 200%;
+      animation: scan 2s infinite;
+      border: 2px solid #444;
+      border-radius: 8px;
+    }
+    @keyframes scan {
+      0% { background-position: 0 0; }
+      100% { background-position: 0 200%; }
+    }
+    #scanned-items {
+      margin-top: 20px;
+      text-align: left;
+    }
+    #scanned-items div {
+      padding: 8px;
+      margin: 5px 0;
+      background: #2a2a2a;
+      border-radius: 5px;
+      display: flex;
+      justify-content: space-between;
+    }
+    #cart-items {
+      margin: 15px 0;
+    }
+    #cart-items div {
+      padding: 10px;
+      margin: 8px 0;
+      background: #2a2a2a;
+      border-radius: 5px;
+      display: flex;
+      justify-content: space-between;
+    }
+    #cart-items button {
+      background: #ff4444;
+      color: white;
+      border: none;
+      padding: 3px 8px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 12px;
+    }
+    #pay-button {
+      width: 100%;
+      padding: 12px;
+      background: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 15px;
+    }
+    #payment-mode {
+      text-align: center;
+      padding: 40px 20px;
+    }
+    #payment-mode h2 {
+      color: #4CAF50;
+      margin-bottom: 20px;
+    }
   </style>
+</head>
 </head>
 <body>
   <div id="blocker">Кликните, чтобы начать</div>
   <div id="crosshair"></div>
   <svg id="barcodeSvg"></svg>
+  <!-- Телефон в правом нижнем углу -->
+  <div id="phone">
+    <div id="phone-header">
+      <div id="phone-time">12:34</div>
+      <div id="phone-battery">🔋 98%</div>
+    </div>
+    <div id="phone-screen">
+      <div id="scan-mode">
+        <h3>Сканировать товар</h3>
+        <div id="scanner-animation"></div>
+        <div id="scanned-items"></div>
+      </div>
+      <div id="cart-mode" style="display: none;">
+        <h3>Ваша корзина</h3>
+        <div id="cart-items"></div>
+        <div id="cart-total">Итого: 0 руб.</div>
+        <button id="pay-button">Оплатить</button>
+      </div>
+      <div id="payment-mode" style="display: none;">
+        <h2>Оплата прошла успешно!</h2>
+        <p>Приятного аппетита!</p>
+      </div>
+    </div>
+    <div id="phone-footer">
+      <button id="cart-toggle">🛒 Корзина</button>
+      <button id="scan-toggle">📷 Сканер</button>
+    </div>
+  </div>
 
   <script src="https://unpkg.com/three@0.158.0/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
@@ -478,6 +625,122 @@
     scene.add(new THREE.PointLight(0xffffff, 1.1, 41).position.set(0, 8, 0));
     scene.add(new THREE.AmbientLight(0xcad6e4, 0.8));
 
+    // База данных товаров
+    const products = {
+      "123456789012": { name: "Салат Цезарь", price: 350 },
+      "987654321098": { name: "Куриный шницель с картошкой", price: 450 },
+      "135790246813": { name: "Сэндвич с курицей", price: 250 },
+      "246801357924": { name: "Том Ям", price: 380 },
+      "112233445566": { name: "Рамен", price: 420 }
+    };
+
+    // Состояние корзины
+    let cart = [];
+
+    // Функция добавления товара в корзину
+    function addToCart(barcode) {
+      const product = products[barcode];
+      if (product) {
+        // Проверяем, есть ли уже такой товар в корзине
+        const existingItem = cart.find(item => item.barcode === barcode);
+        if (existingItem) {
+          existingItem.quantity += 1;
+        } else {
+          cart.push({ barcode, name: product.name, price: product.price, quantity: 1 });
+        }
+        updateCartUI();
+        updateScanUI(barcode, product.name);
+      }
+    }
+
+    // Функция обновления интерфейса сканирования
+    function updateScanUI(barcode, name) {
+      const scannedItems = document.getElementById('scanned-items');
+      const itemElement = document.createElement('div');
+      itemElement.innerHTML = `<span>${name}</span><span>+1</span>`;
+      scannedItems.prepend(itemElement);
+
+      // Ограничиваем количество отображаемых элементов
+      if (scannedItems.children.length > 5) {
+        scannedItems.removeChild(scannedItems.lastChild);
+      }
+    }
+
+    // Функция обновления интерфейса корзины
+    function updateCartUI() {
+      const cartItemsElement = document.getElementById('cart-items');
+      const cartTotalElement = document.getElementById('cart-total');
+
+      // Очищаем текущие элементы
+      cartItemsElement.innerHTML = '';
+
+      // Добавляем товары из корзины
+      let total = 0;
+      cart.forEach((item, index) => {
+        const itemElement = document.createElement('div');
+        const itemTotal = item.price * item.quantity;
+        total += itemTotal;
+
+        itemElement.innerHTML = `
+          <span>${item.name} ×${item.quantity}</span>
+          <div>
+            <span>${itemTotal} руб.</span>
+            <button class="remove-item" data-index="${index}">❌</button>
+          </div>
+        `;
+        cartItemsElement.appendChild(itemElement);
+      });
+
+      // Обновляем итоговую сумму
+      cartTotalElement.textContent = `Итого: ${total} руб.`;
+    }
+
+    // Функция удаления товара из корзины
+    function removeFromCart(index) {
+      cart.splice(index, 1);
+      updateCartUI();
+    }
+
+    // Функция оплаты
+    function processPayment() {
+      // Показываем экран оплаты
+      document.getElementById('scan-mode').style.display = 'none';
+      document.getElementById('cart-mode').style.display = 'none';
+      document.getElementById('payment-mode').style.display = 'block';
+
+      // Через 5 секунд возвращаемся к сканированию
+      setTimeout(() => {
+        document.getElementById('payment-mode').style.display = 'none';
+        document.getElementById('scan-mode').style.display = 'block';
+        // Очищаем корзину после оплаты
+        cart = [];
+        updateCartUI();
+      }, 5000);
+    }
+
+    // Инициализация обработчиков событий для телефона
+    document.getElementById('cart-toggle').addEventListener('click', () => {
+      document.getElementById('scan-mode').style.display = 'none';
+      document.getElementById('cart-mode').style.display = 'block';
+      document.getElementById('payment-mode').style.display = 'none';
+    });
+
+    document.getElementById('scan-toggle').addEventListener('click', () => {
+      document.getElementById('scan-mode').style.display = 'block';
+      document.getElementById('cart-mode').style.display = 'none';
+      document.getElementById('payment-mode').style.display = 'none';
+    });
+
+    document.getElementById('pay-button').addEventListener('click', processPayment);
+
+    // Обработчик для удаления товаров из корзины
+    document.getElementById('cart-items').addEventListener('click', (e) => {
+      if (e.target.classList.contains('remove-item')) {
+        const index = parseInt(e.target.getAttribute('data-index'));
+        removeFromCart(index);
+      }
+    });
+
     // === MOVEMENT CONTROLS ===
     let moveForward=false, moveBackward=false, moveLeft=false, moveRight=false;
     let velocity = new THREE.Vector3();
@@ -552,6 +815,9 @@
             barcodeSvg.style.opacity = '0';
             barcodeSvg.style.pointerEvents = 'none';
           }, 4000);
+
+          // Добавляем товар в корзину телефона
+          addToCart(code);
         }
       }
     });
